netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-app-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: hello-app
  ingress:
    - from:
      - namespaceSelector:      # allows traffic from namespace with label app.kubernetes.io/name=ingress-nginx 
          matchLabels:
            app.kubernetes.io/name: ingress-nginx  
        podSelector:           # allows pods with label app.kubernetes.io/name=ingress-nginx
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
